--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
           <div class="container">
             <p id="name"></p>
           </div>
+
+          <label for="start">Start date:</label>
+
+<input type="date" id="start" name="trip-start"
+       value="2018-07-22"
+       min="2018-01-01" max="2018-12-31">
+label {
+    display: block;
+    font: 1rem 'Fira Sans', sans-serif;
  </body>
 </html>
   
