--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
           <div id="introduction"></div>
-           <img src="./afro-images/afro/240_F_280572878_fV1n5K2Qy9Hsh27C08pwMaivjiMwWnt2.jpg" alt=""> 
+           <img src="./pictures/240_F_252704074_AMyDseSPNi7taGkj17JiWGztcNj1c0Zc.jpg" alt=""> 
             <h2><i>BACKGROUND</i></h2>
             
              </i></p></div>
@@ -116,7 +116,7 @@
                 <div></div> 
 
 
-                <img src="./pictures/240_F_262748911_b17h6O9NPeYEHdtLHsPMbpiVGfDny5JP.jpg alt=">
+                <img src="./pictures/240_F_262748911_b17h6O9NPeYEHdtLHsPMbpiVGfDny5JP.jpg">
 
                  <h2><i>HOW TO DO IT</i></h2>
                   <p><i>Getting to know about you akan name involves some simple steps<br><strong>First is to carefully fill the form on the next section with details on your birthday(day, date, year)<br>After putting in this information, just sit back and in no time, you will have generated your Akan name!</strong></i></p>
