--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                  <div>
 
-                  <img src="./pictures/240_F_286061954_vzqmfQrprvRU75GJLg4lZgUVy3fzd5TO.jpg"   alt="afro"
+                  <img src="./pictures/240_F_225334506_hUIzq1uYIwpGqf0dYCIQEez85vO7lW2J.jpg" height="200px" width="1000px"  alt="afro"
 
                 </div>
 
