--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ label {
 
     <form>
       <label>
-        Choose Birthday date (required, April 1st to 20th):
+        Choose your birthday date:
         <input type="date" name="party" min="1930-04-01" max="2022-04-20" required>
         <span class="validity"></span>
       </label>
