--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ label {
       </label>
     
       <p>
-        <button>Submit</button>
+        <button id="submit-btn" onclick="submit()">Submit()</button>
       </p>
     </form>
  </body>
