--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 
 
       
-  
+    font: 1rem 'Fira Sans', sans-serif;
 
 
-    <form>
+   
       <label>
         Choose your birthday date:
         <input type="date" name="party" min="1930-04-01" max="2022-04-20" required>
