--- a/index.html
+++ b/index.html
@@ -142,15 +142,7 @@
           <div class="container">
             <p id="name"></p>
           </div>
-
-         
-
-
-      
-    font: 1rem 'Fira Sans', sans-serif;
-
-
-   
+     <form>
       <label>
         Choose your birthday date:
         <input type="date" name="party" min="1930-04-01" max="2022-04-20" required>
